--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>SimTrans</h1>
+<p>
+  This is the home page for the Simple translation service
+</p>
+
+<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
