--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title><%= title %></title>
   <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "application" %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/stylesheets' %>
 </head>
