--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= javascript_include_tag "application" %>
-  <%= stylesheet_link_tag    "application" %>
-  <%= csrf_meta_tags %>
-  <%= render 'layouts/stylesheets' %>
+    <%= csrf_meta_tag %>
+    <%= render 'layouts/stylesheets' %>
+    <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag "application" %>
+
 </head>
 <body>
 <div class="container">
@@ -14,6 +15,7 @@
         <%= yield %>
       </section>
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
 </body>
 </html>
