--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: #bebebe;
+  background: #cccccc;
 }
 
 header {
@@ -87,7 +87,7 @@ a.signup_button {
   text-align: center;
   width: 190px;
   color: #fff;
-  background: #006400;
+  background: #00cc33;
   font-size: 150%;
   font-weight: bold;
   padding: 20px;
@@ -128,7 +128,7 @@ td.sidebar {
   width: 30%;
   padding: 1em;
   vertical-align: top;
-  background: #ffc;
+  background: #ffcccc;
 }
 
 .profile img.gravatar {
