--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,4 @@
 <h1>Contact</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/feedback">feedback page</a>.
+  Contact us by email - sense8life@gmail.com
 </p>
