--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -188,3 +188,58 @@ ul.users {
 .users li {
   list-style: none;
 }
+
+h1.phrase {
+  margin-bottom: 0.3em;
+}
+
+table.phrases {
+  margin-top: 1em;
+}
+
+table.phrases tr {
+  height: 70px;
+}
+
+table.phrases tr td.gravatar {
+  border-top: 1px solid #ccc;
+  vertical-align: top;
+  width: 50px;
+}
+
+table.phrases tr td.phrase {
+  border-top: 1px solid #ccc;
+  vertical-align: top;
+  padding-top: 10px;
+}
+
+table.phrases tr td.phrase span.timestamp {
+  display: block;
+  font-size: 85%;
+  color: #666;
+}
+
+div.user_info img {
+  padding-right: 0.1em;
+}
+
+div.user_info a {
+  text-decoration: none;
+}
+
+div.user_info span.user_name {
+  position: absolute;
+}
+
+div.user_info span.phrases {
+  font-size: 80%;
+}
+
+form.new_phrase {
+  margin-bottom: 2em;
+}
+
+form.new_phrase textarea {
+  height: 4em;
+  margin-bottom: 0;
+}
