--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,22 @@
+<% if signed_in? %>
+  <table class="front" summary="For signed-in users">
+    <tr>
+      <td class="main">
+        <h1 class="phrase">Your phrase:</h1>
+        <%= render 'shared/phrase_form' %>
+      </td>
+      <td class="sidebar round">
+        <%= render 'shared/user_info' %>
+      </td>
+    </tr>
+  </table>
+<% else %>
+
 <h1>SimTrans</h1>
 <p>
   This is the home page for the Simple translation service
 </p>
 
 <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+
+<% end %>
