--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,12 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
+      <% unless @user.phrases.empty? %>
+        <table class="phrases" summary="User phrases">
+          <%= render @phrases %>
+        </table>
+        <%= will_paginate @phrases %>
+      <% end %>
     </td>
     <td class="sidebar round">
       <strong>Name</strong> <%= @user.name %><br />
